{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 3,
  "lineage": "3ffa17fb-da3f-3249-a8c0-9dfd212ca6db",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d3c765159f093bab",
            "domain": "vpc",
            "id": "eipalloc-0d3c765159f093bab",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-34-223-137-200.us-west-2.compute.amazonaws.com",
            "public_ip": "34.223.137.200",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pdang-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "pdnat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    }
  ]
}